sass/app.scss
/* ... */
#sliderThree { background: image-url('home3.jpg') top center no-repeat; }
#sliderFour { background: image-url('home4.jpg') top center no-repeat; }

.home-quote { display: block; 
  img { display: block; }
}

/*Global*/
a, img { border: none; }
p { color: #555; line-height: 1.5; }
.orange { color: $orange; }
.green { color: $green; }
.pink { color: $pink; }
.down { margin-top: 13px; }
.full { width: 100%; }
h1 { color: $darkPurple; }
h2 { color: $gray; font-size: 27px; font-size: 2.7rem; }
.Main h4 { font-size: 18px; font-size: 1.8rem; }
.full.rule { background: image-url('seamless-rule.png'); height: 18px; position: relative; top: -10px; z-index: 9; }
.full.stats { background: #f0f0d9; margin-top: -30px; padding-top: 60px; padding-bottom: 30px; margin-bottom: 60px; border-bottom: solid 1px darken(#f0f0d9, 20%); }

.button.banner { box-shadow: none !important; border: none !important; padding: 19px 28px 19px 57px !important; position: relative; border: none; @include box-shadow(0 0 0 rgba(0,0,0,0) inset); color: $white; font-family: "HandOfSeanRegular"; text-align: center; background: image-url('buttons/bg-purple.png') 0 0 repeat-x; 
  &:after { content: ""; display: block; width: 24px; height: 55px; position: absolute; top: 50%; margin-top: -28px; right: -24px; background: image-url('buttons/right-purple.png') 0 0 no-repeat; }
  &.green { background: image-url('buttons/bg-green.png');
    &:after { background: image-url('buttons/right-green.png'); }
  }
  &.orange { background: image-url('buttons/bg-orange.png');
    &:after { background: image-url('buttons/right-orange.png'); }
  }
}

.button.purple { background-color: $darkPurple; color: #fff; border: solid 1px darken($darkPurple, 10%);
  &:hover { background-color: darken($darkPurple, 10%); }
}

blockquote { line-height: 1.7; color: $white; font-family: "HandOfSeanRegular"; background: $lightPink; margin-bottom: 0; margin-top: -1px;
  cite { font-family: "Helvetica", Arial, sans-serif; color: $white; }
  &.secondary { background: #eee; font-family: "Helvetica", Arial, sans-serif; color: #333; padding-bottom: 14px; padding-top: 14px; margin-bottom: 20px; }
}

/*Lead a Drive*/
.featured p { font-size: 18px; }
.feature_wrapper { background-color: $lightGreen; padding-top: 110px; padding-bottom: 40px; margin-bottom: 30px; }
.register_callout { background-color: #f3e9f1; padding: 10px 0; margin-bottom: 20px !important }
.register_callout p { font-size: 22px; color: #999; padding: 12px 0 0 10px; }
#aboutDrive ul li { width: 240px }
#tipsSuccessfulDrive ul { list-style: none; }
#tipsSuccessfulDrive ul li { float: left; width: 170px; padding-left: 20px; }
#tipsSuccessfulDrive ul li.first { padding-left: 0px; }

/*Events*/
.date {
  background-color: $beige;
  text-transform: uppercase;
  padding: 4px 10px;
  margin-top: 18px;
}
.upcoming-events {
    a {
        font-weight: bold;
    }
    p {
        font-size: 14px;
    }
}

/*Sponsor Page*/

ul.numbered-list { list-style: none !important; }
ul.numbered-list li { padding: 0px 0px 15px 60px;  height: 60px; }
ul.numbered-list li { padding: 0px 0px 15px 60px;  height: 60px; }
ul.numbered-list li { padding: 0px 0px 15px 60px;  height: 60px; }
ul.numbered-list li { padding: 0px 0px 15px 60px;  height: 60px; }

.orange-circle { background: image-url("icons/bg-orange.png") center no-repeat; background-size:50px 50px;  height: 50px; width: 50px; display: inline-block;  padding: 20px;line-height: 12px;}
.green-circle { background: image-url("icons/bg-green.png")  center no-repeat; background-size:50px 50px;  height: 50px; width: 50px; display: inline-block;  padding: 20px;line-height: 12px;}
.yellow-circle { background: image-url("icons/bg-yellow.png")  center no-repeat; background-size:50px 50px;  height: 50px; width: 50px; display: inline-block; padding: 20px;line-height: 12px;}
.pink-circle { background: image-url("icons/bg-pink.png")  center no-repeat; background-size:50px 50px;  height: 50px; width: 50px; display: inline-block; padding: 20px;line-height: 12px;}

.block-grid.six-up li { width:16.6%; }

ul.top-circles li span { margin-top: -30px; text-align: center;  }
ul.top-circles li img { margin:0 auto; }
ul.top-circles li.num1 { position: relative; }
ul.top-circles li.num2 { position: relative; }
ul.top-circles li.num3 { position: relative; }
ul.top-circles li.num4 { position: relative; }
ul.top-circles li.num5 { position: relative; }
ul.top-circles li.num1:before { content: "1"; color: #fff; font-weight: bold; position: absolute; top: 16px; left: 40px; font-size: 32px; font-size: 3.2rem; }
ul.top-circles li.num2:before { content: "2"; color: #fff; font-weight: bold; position: absolute; top: 16px; left: 40px; font-size: 32px; font-size: 3.2rem; }
ul.top-circles li.num3:before { content: "3"; color: #fff; font-weight: bold; position: absolute; top: 16px; left: 40px; font-size: 32px; font-size: 3.2rem; }
ul.top-circles li.num4:before { content: "4"; color: #fff; font-weight: bold; position: absolute; top: 16px; left: 40px; font-size: 32px; font-size: 3.2rem; }
ul.top-circles li.num5:before { content: "5"; color: #fff; font-weight: bold; position: absolute; top: 16px; left: 40px; font-size: 32px; font-size: 3.2rem; }

ul.public-service li, ul.media li { width:130px !important; }
ul.top-last li.last { margin-top: 65px;margin-left: -80px !important; }
ul.top-last li h6 { margin-bottom: 0px !important; }

#mainContent { margin-bottom: 100px !important; }


.sponsor-logos { margin-top: 30px; }
.sponsor-logos h6 { font-weight: 300; color: #777; font-size: 20px;  }
.row.sponsor-levels,.row.value-sponsors { margin-top: 20px; }
/* ... */

